src/test/ui/rfc-2005-default-binding-mode/slice.stderr
error[E0004]: non-exhaustive patterns: `&[]` not covered
  --> $DIR/slice.rs:17:11
   |
LL |     match sl { //~ ERROR non-exhaustive patterns
   |           ^^ pattern `&[]` not covered

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0004"
